# Object-Detection

./: CMakeLists.txt  README.md  README_NATIVE.md  WINDOWS_SETUP.md  build.sh  build_windows.bat  build_windows_native.bat  export_onnx.py  test_webcam_setup.bat
python/: capture_frame.py  debug_camera.py  detection_server.py  requirements.txt  test_camera.py
src/: app.rc  detection_client.cpp  detection_client.h  image_processor.cpp  image_processor.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.h  webcam_capture.cpp  webcam_capture.h
